Fix hover and focus color on mobile menu

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -41,6 +41,8 @@ body
             filter: invert(1)
             &::after
                 border-color: #4a4a4a
+        a.navbar-item:focus, a.navbar-item:hover, .navbar-link:focus, .navbar-link:hover
+            color: #4a4a4a
 
 .table tfoot tr td
     vertical-align: middle
